added appendix references

--- a/ngp37_ss4362/index.html
+++ b/ngp37_ss4362/index.html
@@ -270,7 +270,7 @@
             All <code>.wav</code> samples used in this project, both for drum hits and backing tracks, were sourced from
             copyright-free libraries and are cleared for non-commercial use. We based our synthesis techniques on
             publicly available course materials and research papers, with citations provided in
-            Appendix D. No proprietary trademarks or patented protocols were reverse-engineered or violated in the
+            <a href="#appendices">Appendix D</a>.. No proprietary trademarks or patented protocols were reverse-engineered or violated in the
             course of this project.
         </p>
 
@@ -585,6 +585,8 @@
                 <source src="audio/backing_mellow.wav" type="audio/wav">
             </audio>
         </div>
+
+        <p> Check out the bonus demo clips in <a href="#appendices">Appendix E</a> for a couple of cool musical performances! </p>
 
 
         <h3>Speed</h3>
