--- a/ngp37_ss4362/index.html
+++ b/ngp37_ss4362/index.html
@@ -161,7 +161,7 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/_FUeBRVrDhI?si=O9tPzMPYrR7bxZss"
             title="Final Demo" style="border: none;"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>ß
+            allowfullscreen></iframe>
     </section>
 
     <section id="highlevel">
